--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -23,18 +23,19 @@ jobs:
       - name: Build Documentation
         run: make html -C docs
       
-      - name: Checkout Repository B
+      - name: Checkout website repository
         uses: actions/checkout@v2
         with:
           repository: eclipse-wattadvisor/website
+          path: website
 
       - name: Copy Documentation to Repository B
-        run: cp -r docs/build/html/* .
+        run: cp -r docs/build/html/* website
 
       - name: Commit and Push Changes
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          git add .
+          git add website
           git commit -m "Update documentation"
           git push
