--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -12,31 +14,36 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
+        with:
+          path: code
         
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: 3.11
+          
       - name: Install Sphinx packages
         run: pip install sphinx sphinx-autoapi sphinx-math-dollar myst-nb sphinx-rtd-theme
 
       - name: Build Documentation
-        run: make html -C docs
+        run: |
+          cd code/docs
+          make html
       
-      - name: Checkout website repository
-        uses: actions/checkout@v2
-        with:
-          repository: eclipse-wattadvisor/website
-          path: website
-          clean: false
+      # - name: Checkout website repository
+      #   uses: actions/checkout@v2
+      #   with:
+      #     repository: eclipse-wattadvisor/website
+      #     path: website
+      #     clean: false
 
-      - name: Copy Documentation to Repository B
-        run: cp -r docs/build/html/* website
+      # - name: Copy Documentation to Repository B
+      #   run: cp -r docs/build/html/* website
 
       - name: Commit and Push Changes
         run: |
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          git add website
+          git add code
           git commit -m "Update documentation"
           git push
