--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -42,8 +42,9 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
+          cd code
           git config --global user.email "actions@github.com"
           git config --global user.name "GitHub Actions"
-          git add code
+          git add -A
           git commit -m "Update documentation"
           git push
