--- a/.github/workflows/build_documentation_and_commit_to_website_repo.yml
+++ b/.github/workflows/build_documentation_and_commit_to_website_repo.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           repository: eclipse-wattadvisor/website
           path: website
+          token: ${{secrets.GITHUB_TOKEN}}
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -46,4 +47,7 @@ jobs:
           git config --global user.name "GitHub Actions"
           git add -A
           git commit -m "Update documentation"
-          git push
+          git push https://$USERNAME:$REPO_KEY@github.com/eclipse-wattadvisor/website.git
+        env:
+          REPO_KEY: ${{secrets.GITHUB_TOKEN}}
+          USERNAME: github-actions[bot]
