--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,19 +1,28 @@
 pyomo==6.5.0
 pyyaml==6.0
 pandas==1.5.3
-pydantic==1.10.12
-xarray==2023.4.2
+holidays==0.27.1
 cdsapi==0.6.1
 pvlib==0.9.5
 requests==2.29.0
-holidays==0.27.1
+shapely==2.0.1
+xarray==2023.4.2
 xlsxwriter==3.1.2
+fastapi==0.100.1
+uvicorn==0.23.2
+pydantic==1.10.12
 geopandas==0.13.0
 descartes==1.1.0
 geoalchemy2==0.6.3
+python-dateutil==2.8.2
 demandlib==0.1.9
 highspy==1.5.3
 numpy==1.26.2
 open_FRED-cli==0.0.1
 windpowerlib==0.2.1
+sphinx
+sphinx-autoapi
+sphinx-math-dollar
+myst-nb
+sphinx-rtd-theme
 feedinlib @ https://github.com/oemof/feedinlib/archive/dev.zip
