--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,15 @@
-pyomo==6.5.0
-pyyaml==6.0
-pandas==2.2.0
-pydantic==1.10.12
-xarray==2023.4.2
-cdsapi==0.6.1
-pvlib==0.9.5
-requests==2.29.0
-holidays==0.27.1
-xlsxwriter==3.1.2
-geopandas==0.13.0
-descartes==1.1.0
-geoalchemy2==0.6.3
-demandlib==0.1.9
-highspy==1.5.3
-numpy==1.26.2
-open_FRED-cli==0.0.1
-windpowerlib==0.2.1
+pyomo
+pyyaml
+pandas
+pydantic
+xarray
+cdsapi
+pvlib<0.10
+requests
+holidays
+xlsxwriter
+demandlib
+highspy>=1.10
+numpy<2.0
+windpowerlib
 feedinlib @ https://github.com/oemof/feedinlib/archive/dev.zip
