--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,8 +23,9 @@ dynamic = ["dependencies", "optional-dependencies"]
 dependencies = {file = ["requirements.txt"]}
 optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}
 
-[tool.setuptools]
-packages = ["wattadvisor"]
+[tool.setuptools.packages.find]
+   where = ["."]
+   include = ["wattadvisor*"]
 
 [build-system]
 requires = ["setuptools"]
